--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "build": "tsc",
     "dev": "ts-node-dev --respawn --watch=src src/index.ts",
     "prod": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "stream": "ts-node-dev src/modules/task/task.stream.ts"
   },
   "dependencies": {
+    "@types/tcp-port-used": "^1.0.1",
+    "axios": "^1.3.5",
+    "csv-parse": "^5.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^6.15.0"
+    "tcp-port-used": "^1.0.2"
   }
 }
